# UpGuardian

./: .gitignore  README.md  pubspec.yaml  test.sh
backend/: pyproject.toml  upguardian.db
backend/src/upguardian_backend/: .env  __init__.py  auth0.py  db.py  main.py  nemotron.py  request.py  service.py
demo_backend/: pyproject.toml
demo_backend/src/demo_backend/: __init__.py  main.py
demo_backend/src/demo_backend/routers/: README.md
demo_backend/src/demo_backend/routers/v1/: README.md  customers.py
demo_backend/src/demo_backend/routers/v2/: README.md  customers.py
demo_backend/src/demo_backend/routers/v3/: README.md  customers.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart  my_home_page.dart  requests_page.dart  requests_table.dart  rules_page.dart  tests_page.dart
frontend/lib/api/: database.dart  services.dart
frontend/web/: manifest.json
nemotron/: pyproject.toml
nemotron/src/nemotron/: __init__.py
test/: widget_test.dart
web/: index.html
